fix 2nd bugs on tablet side UI

--- a/css/responsive-style.css
+++ b/css/responsive-style.css
@@ -2,7 +2,7 @@
 /* HANDLE RESPONSIVE SIDE */
 
 /* ukuran tablet */
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1200px) {
 
     header nav {
         width: 100vw;
